Fix choices' menu z-index override

--- a/bokehjs/src/less/widgets/choices.less
+++ b/bokehjs/src/less/widgets/choices.less
@@ -48,7 +48,7 @@
   white-space: initial;
 }
 
-.choices__list--dropdown {
+.choices__list--dropdown, .choices__list[aria-expanded] {
   .bring-to-front();
 }
 
